--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postbuild": "pagecrypt dist/sample-application/index.html dist/sample-application/index.html password --unhandled-rejections=strict"
+    "postbuild": "staticrypt dist/sample-application/index.html password"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "pagecrypt": "^6.0.1",
     "rxjs": "~7.8.0",
+    "staticrypt": "^2.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
